#154 : Fix Gradle IT tests